Add eval_model notebook. Fix bugs in valid.py.

--- a/eval_model.ipynb
+++ b/eval_model.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (4151192426.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    os.environ[“CUDA_VISIBLE_DEVICES”] = “0”\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -15,7 +24,7 @@
     "from evaluation.valid import validate\n",
     "\n",
     "\n",
-    "os.environ[“CUDA_VISIBLE_DEVICES”] = “0”\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "val_sets = 'CoCA+CoSal2015+CoSOD3k'\n",
     "testsets = val_sets\n",
     "config = Config()\n",
@@ -40,8 +49,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ckpt/tmp-INS/ep100.pth\n",
-      "Validating ..., CoCA"
+      "Loading ckpt/tmp-INS/ep100.pth\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m val_save \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m--\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(ckpt\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m:])\u001b[39m.\u001b[39mrstrip(\u001b[39m'\u001b[39m\u001b[39m.pth\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mLoading\u001b[39m\u001b[39m'\u001b[39m, ckpt)\n\u001b[0;32m----> 8\u001b[0m model\u001b[39m.\u001b[39mload_state_dict(torch\u001b[39m.\u001b[39mload(ckpt))\n\u001b[1;32m      9\u001b[0m measures \u001b[39m=\u001b[39m validate(model, test_loaders, val_save, val_sets, valid_only_S\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m idx_dataset, (testset, measures_per_dataset) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mzip\u001b[39m(testsets\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m), measures)):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
@@ -80,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sod",
    "language": "python",
-   "name": "python3"
+   "name": "sod"
   },
   "language_info": {
    "codemirror_mode": {
