Damn the stupid mistake in valid, prevopis Sm on three datasets are wrong.

--- a/eval_model.ipynb
+++ b/eval_model.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (4151192426.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    os.environ[“CUDA_VISIBLE_DEVICES”] = “0”\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -25,7 +16,7 @@
     "\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
-    "val_sets = 'CoCA+CoSal2015+CoSOD3k'\n",
+    "val_sets = 'CoCA+CoSOD3k+CoSal2015'\n",
     "testsets = val_sets\n",
     "config = Config()\n",
     "# Prepare dataset\n",
@@ -49,37 +40,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ckpt/tmp-INS/ep100.pth\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m val_save \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m--\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(ckpt\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m:])\u001b[39m.\u001b[39mrstrip(\u001b[39m'\u001b[39m\u001b[39m.pth\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mLoading\u001b[39m\u001b[39m'\u001b[39m, ckpt)\n\u001b[0;32m----> 8\u001b[0m model\u001b[39m.\u001b[39mload_state_dict(torch\u001b[39m.\u001b[39mload(ckpt))\n\u001b[1;32m      9\u001b[0m measures \u001b[39m=\u001b[39m validate(model, test_loaders, val_save, val_sets, valid_only_S\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m idx_dataset, (testset, measures_per_dataset) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mzip\u001b[39m(testsets\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m), measures)):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+      "Loading ckpt/tmp-INS/ep100.pth\n",
+      "Validating ..., CoCA, CoSal2015, CoSOD3k\n",
+      "Dataset: CoCA\n",
+      "\tSm: 0.7200.\n",
+      "Dataset: CoSal2015\n",
+      "\tSm: 0.9110.\n",
+      "Dataset: CoSOD3k\n",
+      "\tSm: 0.8920.\n",
+      "Loading ckpt/tmp-INS/ep110.pth\n",
+      "Validating ..., CoCA, CoSal2015, CoSOD3k\n",
+      "Dataset: CoCA\n",
+      "\tSm: 0.7140.\n",
+      "Dataset: CoSal2015\n",
+      "\tSm: 0.9060.\n",
+      "Dataset: CoSOD3k\n",
+      "\tSm: 0.8910.\n",
+      "Loading ckpt/tmp-INS/ep120.pth\n",
+      "Validating ..., CoCA"
      ]
     }
    ],
    "source": [
     "from glob import glob\n",
+    "import shutil\n",
     "\n",
     "\n",
     "ckpts = glob('ckpt/tmp-INS/*.pth')\n",
+    "\n",
+    "valid_only_S = True\n",
     "for ckpt in ckpts:\n",
-    "    val_save = '--'.join(ckpt.split('/')[-2:]).rstrip('.pth')\n",
+    "    val_save = '__'.join(ckpt.split('/')[-2:]).rstrip('.pth')\n",
+    "    if os.path.exists(val_save):\n",
+    "        shutil.rmtree(val_save)\n",
     "    print('Loading', ckpt)\n",
     "    model.load_state_dict(torch.load(ckpt))\n",
-    "    measures = validate(model, test_loaders, val_save, val_sets, valid_only_S=False)\n",
-    "    for idx_dataset, (testset, measures_per_dataset) in enumerate(zip(testsets.split('+'), measures)):\n",
-    "        fm, wfm, sm, em, mae = measures_per_dataset\n",
-    "        print('Dataset:', testset)\n",
-    "        print('\\tEmax: {:.4f}, \\tSm: {:.4f}, \\tFmax: {:.4f}, \\tMAE: {:.4f}.'.format(\n",
-    "            em['curve'].max().round(3), sm.round(3), fm['curve'].max().round(3), mae.round(3)\n",
-    "        ))"
+    "    measures = validate(model, test_loaders, val_save, val_sets, valid_only_S=valid_only_S)\n",
+    "    for idx_dataset, (testset, scores_per_dataset) in enumerate(zip(testsets.split('+'), measures)):\n",
+    "        if valid_only_S:\n",
+    "            sm = scores_per_dataset[0]\n",
+    "            print('Dataset:', testset)\n",
+    "            print('\\tSm: {:.4f}.'.format(\n",
+    "                sm.round(3)\n",
+    "            ))\n",
+    "        else:\n",
+    "            fm, wfm, sm, em, mae = scores_per_dataset\n",
+    "            print('Dataset:', testset)\n",
+    "            print('\\tEmax: {:.4f}, \\tSm: {:.4f}, \\tFmax: {:.4f}, \\tMAE: {:.4f}.'.format(\n",
+    "                em['curve'].max().round(3), sm.round(3), fm['curve'].max().round(3), mae.round(3)\n",
+    "            ))"
    ]
   },
   {
