Fix bugs of val process in train. val for multiple sets are still undone.

--- a/eval_model.ipynb
+++ b/eval_model.ipynb
@@ -84,7 +84,7 @@
     "                sm.round(3)\n",
     "            ))\n",
     "        else:\n",
-    "            fm, wfm, sm, em, mae = scores_per_dataset\n",
+    "            sm, mae, fm, wfm, em = scores_per_dataset\n",
     "            print('Dataset:', testset)\n",
     "            print('\\tEmax: {:.4f}, \\tSm: {:.4f}, \\tFmax: {:.4f}, \\tMAE: {:.4f}.'.format(\n",
     "                em['curve'].max().round(3), sm.round(3), fm['curve'].max().round(3), mae.round(3)\n",
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Mar  2 2023, 03:21:46) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
